--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -15,7 +15,7 @@
         </form>
       <form method="get" action="{% url 'clients_list' %}">
         <div class="flex justify-between mb-4">
-           <div class="flex w-full fa-pen-to-square">
+           <div class="flex w-full">
                 <input type="search" name="q" value="{{ query }}" placeholder="Поиск клиента..." class="border border-gray-200 px-4 py-2 mr-5 rounded w-full">
                 <button class="bg-blue-700 inline-flex align-items-center text-white px-4 rounded hover:bg-blue-600 py-2"><i style="margin-right: 5px" class="fa fa-search" aria-hidden="true"></i>  Найти</button>
             </div>
