--- a/templates/commons/login.html
+++ b/templates/commons/login.html
@@ -17,14 +17,14 @@
     {% block head_extra %}{% endblock %}
 
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 ">
 {% block body %}
 
 {% block content %}
-<div class="container mx-auto">
+<div class="container mx-auto mt-50">
     <div class="flex justify-center">
         <div class="w-full max-w-md">
-            <div class="bg-white shadow-md rounded-lg px-8 py-6 mb-8 mt-4">
+            <div class="bg-white shadow-md rounded-lg px-8 py-6 mb-8 mt-32">
     <h2 class="text-2xl text-center font-bold mb-4 mt-4">Вход</h2>
     <form action="." method="post">
 
