--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,8 @@
 /* Стили для боковой панели */
+#navBarMobile{
+    background-color: #2c3e50; /* Цвет фона боковой панели */
+     overflow-x: hidden;
+}
 #sidebar {
     width: 200px;
     background-color: #2c3e50; /* Цвет фона боковой панели */
@@ -20,6 +24,14 @@
     display: block;
 }
 
+
+#logo-mobile{
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
 /* Стили для элементов меню */
 .menu-item {
     color: white;
