--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -13,15 +13,19 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.11/index.global.min.js'></script>
+      <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css' rel='stylesheet' />
+      <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/1a16d43dc5.js" crossorigin="anonymous"></script>
     {% block head_extra %}{% endblock %}
 
 </head>
 <body class="bg-gray-100">
 {% block body %}
-    <div class="ml-64 mr-20"> <!-- Сдвиг контента на ширину боковой панели -->
+    <div class="lg:ml-64 lg:mr-20">
          {% include 'core/navbar.html' %}
-        <div class="container mx-auto">
+        <div class="container mx-auto max-w-screen-lg">
             {% include 'core/messages.html' %}
             {% block content %}
 
@@ -29,6 +33,8 @@
         </div>
     </div>
 {% endblock %}
+{% block extrascripts %}
+{% endblock extrascripts %}
 {% block footer_extra %}{% endblock %}
 </body>
 </html>
