--- a/templates/orders/create_client_order.html
+++ b/templates/orders/create_client_order.html
@@ -38,6 +38,12 @@
             {{ form.state|add_class:"form-select block w-full sm:text-sm sm:leading-5 rounded-md" }}
         </div>
 
+       <div>
+            <label for="{{ form.is_urgent.id_for_label }}" class="block text-sm font-medium text-gray-700">Срочный</label>
+            {{ form.is_urgent|add_class:"form-checkbox block mt-2 mb-2 sm:text-sm sm:leading-5 rounded-md" }}
+        </div>
+
+
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Создать</button>
     </form>
 </div>
